fix: switch circuit breaker tests to composite gateway